ZMCIntegral/vectest.163064.err
  File "./vec-test.py", line 8
    f = (:)
         ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
